deployCode/objects/Schedule__c.object
<CustomObject>
    <description>Time Table</description>
    <fields>
        <fullName>Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Schedules</relationshipLabel>
        <relationshipName>Schedules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>From__c</fullName>
        <label>From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>No_of_days__c</fullName>
        <label>No of days</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_of_nights__c</fullName>
        <label>No of nights</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Offer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Offer</label>
        <referenceTo>Offer__c</referenceTo>
        <relationshipLabel>Schedules</relationshipLabel>
        <relationshipName>Schedules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>To__c</fullName>
        <label>To</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Total_cost__c</fullName>
        <label>Total cost</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tour_Package__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Tour Package</label>
        <referenceTo>Tour_Packages__c</referenceTo>
        <relationshipLabel>Schedules</relationshipLabel>
        <relationshipName>Schedules</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Schedule</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>View_schedule</fullName>
        <columns>NAME</columns>
        <columns>Customer__c</columns>
        <columns>From__c</columns>
        <columns>To__c</columns>
        <columns>Total_cost__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>LAST_UPDATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>View_schedule</label>
    </listViews>
    <nameField>
        <label>Schedule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Schedules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Date_rule</fullName>
        <active>true</active>
        <errorConditionFormula>To__c &lt; From__c</errorConditionFormula>
        <errorDisplayField>To__c</errorDisplayField>
        <errorMessage>Enter Appropriate date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>from_date</fullName>
        <active>true</active>
        <errorConditionFormula>From__c &lt; TODAY()</errorConditionFormula>
        <errorDisplayField>From__c</errorDisplayField>
        <errorMessage>enter future date</errorMessage>
    </validationRules>
</CustomObject>